--- a/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -32,8 +32,8 @@
                         <p:submenu label="Administración" rendered="true" style="margin-right:15px;">
                             <p:menuitem value="POs" title="POs" action="gotoproductowners"/>
                         </p:submenu>
-                        <p:submenu label="#{equipoController.miembroAuth.nombre}" style="float: right;" icon="fa fa-fw fa-user">
-                       	 		<p:menuitem action="#{loginController.logout}" value="Profile" immediate="true" icon="fa fa-fw fa-edit" ajax="false"/>
+                        <p:submenu label="#{proyectoController.miembroAuth.nombre}" style="float: right;" icon="fa fa-fw fa-user">
+                       	 		<p:menuitem action="gotoprofile" value="Profile"  immediate="true" icon="fa fa-fw fa-edit" ajax="false"/>
                        	 		<p:menuitem action="#{loginController.logout}" value="Settings" immediate="true" icon="fa fa-fw fa-cog" ajax="false"/>
                        	 		<p:separator/>
 				                <p:menuitem action="#{loginController.logout}" value="Logout" immediate="true" icon="fa fa-fw fa-sign-out" ajax="false"/>
